# llm-web-navigation

./: .gitignore  Project seminar 1.ppt  README.md  main.py  pyproject.toml  transformers_demo.py  ultralytics_demo.py  website_samples.csv
thesis/: bibliography.bib  exploration.tex  introduction.tex  main.tex  methods.tex
